k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: uptime-monitor
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgres
          image: postgres:trixie
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
