k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: uptime-monitor
spec:
  selector:
    app: db
  ports:
  - 
    protocol: TCP
    port: 5432
    targetPort: 5432
