k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: uptime-monitor
spec:
  selector:
    app: web
  ports:
  - 
    protocol: TCP
    port: 80
    targetPort: 8000
